# PalmaStudio

./: .gitignore  CHANGELOG.md  CLAUDE.md  Oasis Logo.ai  Palma-Clipper-Extension-Guide.docx  Palma-Overview.docx  README.md  RELEASE_NOTES_1.0.10.md  index.html  oasis-brand.docx  oasis-claude-code-prompt.md  oasis-prd.docx  oasis-styleguide.docx  package-lock.json  package.json  vite.config.js
electron/: clipServer.cjs  main.cjs  preload.cjs  windowState.cjs
extension/: BUILD.md  README.md  background.js  manifest.json  popup.html  popup.js
scripts/: after-pack.cjs  build-extension.mjs  build-installer.ps1  genappicon.mjs  generate-user-guide.cjs  genlogo.mjs  installer.nsh
src/: App.jsx  index.css  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppLayout.jsx  Badge.jsx  Button.jsx  ClipReceiver.jsx  ContextMenu.jsx  CreationBench.jsx  ExportModal.jsx  Logo.jsx  Modal.jsx  ModuleTabBar.jsx  NavItem.jsx  PageView.jsx  ProjectShell.jsx  Scrubber.jsx  Sidebar.jsx  Thumb.jsx  TitleBar.jsx  ToolWindow.jsx  Topbar.jsx  Tutorial.jsx  Welcome.jsx
src/hooks/: useCanvas.js  useDrop.js  useSession.js  useTauriDrop.js
src/store/: benchStore.js  canvasStore.js  focusStore.js  projectStore.js  sessionStore.js  settingsStore.js
src/utils/: boardOps.js  canvasUtils.js  captureBoard.js  colourExtract.js  focusExport.js  focusLayout.js  format.js  id.js  itemClipboard.js  pathUtils.js  platform.js  sessionIO.js  systemClipboard.js
(+18 files in other folders)
